# mcp_course

./: main.py  pyproject.toml  simple_mcp_client.py  simple_mcp_server.py
servers/: weather_server.py
